@@ -1,21 +1,23 @@
 package com.example.demo.config;
 
 import com.example.demo.security.JwtUtil;
+import io.jsonwebtoken.Claims;
+
 import jakarta.servlet.FilterChain;
 import jakarta.servlet.ServletException;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
+
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
-import org.springframework.stereotype.Component;
 import org.springframework.web.filter.OncePerRequestFilter;
-import java.io.IOException;
-import java.util.Collections;
 
-@Component
+import java.io.IOException;
+import java.util.List;
+
 public class JwtAuthenticationFilter extends OncePerRequestFilter {
-    
+
     private final JwtUtil jwtUtil;
 
     public JwtAuthenticationFilter(JwtUtil jwtUtil) {
@@ -23,32 +25,50 @@ public class JwtAuthenticationFilter extends OncePerRequestFilter {
     }
 
     @Override
-    protected void doFilterInternal(HttpServletRequest request, HttpServletResponse response, 
-                                  FilterChain filterChain) throws ServletException, IOException {
-        
+    protected void doFilterInternal(HttpServletRequest request,
+                                    HttpServletResponse response,
+                                    FilterChain filterChain)
+            throws ServletException, IOException {
+
+        String path = request.getRequestURI();
+
+        if (path.equals("/") ||
+            path.startsWith("/proxy") ||
+            path.startsWith("/swagger") ||
+            path.startsWith("/v3") ||
+            path.startsWith("/auth") ||
+            path.startsWith("/status")) {
+
+            filterChain.doFilter(request, response);
+            return;
+        }
+
         String authHeader = request.getHeader("Authorization");
-        
+
         if (authHeader != null && authHeader.startsWith("Bearer ")) {
-            String token = authHeader.substring(7);
-            
             try {
-                String email = jwtUtil.extractEmail(token);
-                String role = jwtUtil.extractRole(token);
-                
-                if (email != null && SecurityContextHolder.getContext().getAuthentication() == null) {
-                    UsernamePasswordAuthenticationToken authToken = 
+                String token = authHeader.substring(7);
+                Claims claims = jwtUtil.validateToken(token);
+
+                String email = claims.get("email", String.class);
+                String role = claims.get("role", String.class);
+
+                UsernamePasswordAuthenticationToken authentication =
                         new UsernamePasswordAuthenticationToken(
-                            email, 
-                            null, 
-                            Collections.singletonList(new SimpleGrantedAuthority("ROLE_" + role))
+                                email,
+                                null,
+                                List.of(new SimpleGrantedAuthority("ROLE_" + role))
                         );
-                    SecurityContextHolder.getContext().setAuthentication(authToken);
-                }
+
+                SecurityContextHolder.getContext()
+                        .setAuthentication(authentication);
+
             } catch (Exception e) {
-                // Invalid token, continue without authentication
+                SecurityContextHolder.clearContext();
             }
         }
-        
+
         filterChain.doFilter(request, response);
     }
 }
+
